Nav overflow fix on mobile pt 13

--- a/blocks/src/blocks/nav-container/style.scss
+++ b/blocks/src/blocks/nav-container/style.scss
@@ -106,7 +106,7 @@
         height: 100%;
 
         .flyout-content {
-            height: calc(100% - var(--wp--preset--spacing--60));
+            height: calc(100% - (var(--wp--preset--spacing--60) * 2));
             overflow-y: scroll;
             box-sizing: border-box;
         }
